--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vite": "^6.3.5"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.7"
+    "@tailwindcss/vite": "^4.1.7",
+    "recharts": "^2.15.3"
   }
 }
