--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "vite",
+    "build": "vite build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -26,6 +27,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
+    "firebase": "^11.8.0",
     "recharts": "^2.15.3"
   }
 }
