--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true
   }
 }
