--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
     "firebase": "^11.8.0",
+    "react-icons": "^5.5.0",
     "recharts": "^2.15.3"
   }
 }
