Fix linting workflow

--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -13,9 +13,7 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - name: Run ESLint (SARIF)
-        run: npx eslint src \
-          --format sarif \
-          --output-file eslint-results.sarif
+        run: npx eslint src --format sarif --output-file eslint-results.sarif
       - name: Upload SARIF to GitHub
         uses: github/codeql-action/upload-sarif@v2
         with:
