--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -15,6 +15,7 @@ jobs:
       - name: Run ESLint (SARIF)
         run: npx eslint src --format @microsoft/eslint-formatter-sarif --output-file eslint-results.sarif
       - name: Upload SARIF to GitHub
-        uses: github/codeql-action/upload-sarif@v2
+        uses: jakebailey/analysis-action@v1
         with:
+          name: ESLint Results
           sarif_file: eslint-results.sarif
